--- a/NexterPremierLeague2.html
+++ b/NexterPremierLeague2.html
@@ -626,5 +626,314 @@ userAgent:"Mozilla/5.0 (iPhone; CPU iPhone OS 14_4_2 like Mac OS X) AppleWebKit/
 
 
 
+{"name":"True Sports1-A🇹🇭",
+"image":"https://i.imgur.com/juqnBoi.png",
+"url": "https://streaming.livescorethai.net/iptv/hd-tsport1.stream/chunks.m3u8",
+"referer": "https://livescorethai.net/",
+"playInNatPlayer": "true"},
+
+{"name":"True Sports1-B🇹🇭",
+"image":"https://i.imgur.com/juqnBoi.png",
+"url": "https://cdn1.googlecdn.live/dooballx/tsp1/chunks.m3u8",
+"referer": "https://dooballx.com/",
+"playInNatPlayer": "true"},
+
+{"name": "True Sports1-C🇹🇭",
+"image":"https://i.imgur.com/juqnBoi.png",
+"url":"https://rr3-ic3d-ndjcs.huaweicdncloud.com/dooball2you/truesporthd1/th-sport/truesport1/chunks.m3u8",
+"referer": "https://dooball2you.com/",
+"playInNatPlayer":"true"},
+
+{"name":"True Sports2-A🇹🇭",
+"image":"https://i.imgur.com/GuTOZ6e.png",
+"url": "https://streaming.livescorethai.net/iptv/hd-tsport2.stream/chunks.m3u8",
+"referer": "https://livescorethai.net/",
+"playInNatPlayer": "true"},
+
+{"name": "True Sports2-B🇹🇭",
+"image":"https://i.imgur.com/GuTOZ6e.png",
+"url": "https://cdn1.googlecdn.live/dooballx/tsp2/chunks.m3u8",
+"referer": "https://dooballx.com/",
+"playInNatPlayer": "true"},
+
+{"name":"True Sports2-C🇹🇭",
+"image":"https://i.imgur.com/GuTOZ6e.png",
+"url":"https://rr3-ic3d-ndjcs.huaweicdncloud.com/dooball2you/truesporthd2/th-sport/truesport2/chunks.m3u8",
+"referer": "https://dooball2you.com/",
+"playInNatPlayer":"true"},
+
+{"name": "True Sports3-A🇹🇭",
+"image":"https://i.imgur.com/vCo2KP7.png",
+"url": "https://streaming.livescorethai.net/iptv/hd-tsport3.stream/chunks.m3u8",
+"referer": "https://livescorethai.net/",
+"playInNatPlayer": "true"},
+
+{"name": "True Sports3-B🇹🇭",
+"image":"https://i.imgur.com/vCo2KP7.png",
+"url": "https://cdn1.googlecdn.live/dooballx/tsp3/chunks.m3u8",
+"referer": "https://dooballx.com/",
+"playInNatPlayer": "true"},
+
+{"name":"True Sports3-C🇹🇭",
+"image":"https://i.imgur.com/vCo2KP7.png",
+"url":"https://rr3-ic3d-ndjcs.huaweicdncloud.com/dooball2you/truesporthd3/th-sport/truesport3/chunks.m3u8",
+"referer": "https://dooball2you.com/",
+"playInNatPlayer":"true"},
+
+{"name":"True Sports4-A🇹🇭",
+"image":"https://i.imgur.com/5Vht4HE.png",
+"url": "https://streaming.livescorethai.net/iptv/hd-tsport4.stream/chunks.m3u8",
+"referer": "https://livescorethai.net/",
+"playInNatPlayer": "true"},
+
+{"name": "True Sports4-B🇹🇭",
+"image":"https://i.imgur.com/5Vht4HE.png",
+"url": "https://dookeela.live/live-tv/tsp4",
+"playInNatPlayer": "true"},
+
+{"name": "True Sports4-C🇹🇭",
+"image":"https://i.imgur.com/5Vht4HE.png",
+"url": "https://goal-th.com/ช่องรายการทีวี/?id=395&tv=truesports4",
+"playInNatPlayer": "true"},
+
+{"name":"True Sports5-A🇹🇭",
+"image":"https://i.imgur.com/kWbPWSR.png",
+"url": "https://streaming.livescorethai.net/iptv/sd-tsport5.stream/chunks.m3u8",
+"referer": "https://livescorethai.net/",
+"playInNatPlayer": "true"},
+
+{"name": "True Sports5-B🇹🇭",
+"image":"https://i.imgur.com/kWbPWSR.png",
+"url": "https://cdn1.googlecdn.live/dooballx/tsp5/chunks.m3u8",
+"referer": "https://dooballx.com/",
+"playInNatPlayer": "true"},
+
+{"name":"True Sports5-C🇹🇭",
+"image":"https://i.imgur.com/kWbPWSR.png",
+"url":"https://rr3-ic3d-ndjcs.huaweicdncloud.com/dooball2you/truesportsd5/th-sport/truesport5/chunks.m3u8",
+"referer": "https://dooball2you.com/",
+"playInNatPlayer":"true"},
+
+{"name":"True Sports7-A🇹🇭",
+"image":"https://i.imgur.com/8T9GeqX.png",
+"url": "https://streaming.livescorethai.net/iptv/sd-tsport7.stream/chunks.m3u8",
+"referer": "https://livescorethai.net/",
+"playInNatPlayer": "true"},
+
+{"name": "True Sports7-B🇹🇭",
+"image":"https://i.imgur.com/8T9GeqX.png",
+"url": "https://cdn1.googlecdn.live/dooballx/tsp7/chunks.m3u8",
+"referer": "https://dooballx.com/",
+"playInNatPlayer": "true"},
+
+{"name":"True Sports7-C🇹🇭",
+"image":"https://i.imgur.com/8T9GeqX.png",
+"url":"https://rr3-ic3d-ndjcs.huaweicdncloud.com/dooball2you/truesportsd7/th-sport/truesport7/chunks.m3u8",
+"referer":"https://dooball2you.com/",
+"playInNatPlayer":"true"},
+
+{"name": "SPOTV-A🇹🇭",
+"image":"https://i.imgur.com/WpXs31g.png",
+"url": "https://cdn1.googlecdn.live/dooballx/spotv/chunks.m3u8",
+"referer": "https://dooballx.com/",
+"playInNatPlayer": "true"},
+
+{"name": "SPOTV-B🇹🇭",
+"image":"https://i.imgur.com/WpXs31g.png",
+"url": "https://www.ball24.tv/allchannel/?id=spotv1",
+"playInNatPlayer":"true"},
+
+{"name": "SPOTV-C🇹🇭",
+"image":"https://i.imgur.com/WpXs31g.png",
+"url": "https://www.livedoomovies.com:4432/02_foxsport_720p/chunklist.m3u8",
+"referer":"https://www.madoohd.com/",
+"playInNatPlayer":"true"},
+
+{"name": "SPOTV-Indo🇮🇩",
+"image":"https://i.imgur.com/WpXs31g.png",
+"url": "https://rr3-ic3d-ndjcs.huaweicdncloud.com/dooball2you/spotv1/th-sport/spotv1/chunks.m3u8",
+"referer": "https://dooball2you.com/",
+"playInNatPlayer":"true"},
+
+{"name": "SPOTV2-A🇹🇭",
+"image":"https://i.imgur.com/NK4kgIM.png",
+"url": "https://cdn1.googlecdn.live/dooballx/spotv2/chunks.m3u8",
+"referer": "https://dooballx.com/",
+"playInNatPlayer": "true"},
+
+{"name": "SPOTV2-B🇹🇭",
+"image":"https://i.imgur.com/NK4kgIM.png",
+"url": "https://www.ball24.tv/allchannel/?id=spotv2",
+"playInNatPlayer":"true"},
+
+{"name": "SPOTV2-C🇹🇭",
+"image":"https://i.imgur.com/NK4kgIM.png",
+"url":"https://www.livedoomovies.com:4432/02_FoxSport2_TH_720p/chunklist.m3u8",
+"referer":"https://www.madoohd.com/",
+"playInNatPlayer":"true"},
+
+{"name": "SPOTV2-Indo🇮🇩",
+"image":"https://i.imgur.com/NK4kgIM.png",
+"url": "https://rr3-ic3d-ndjcs.huaweicdncloud.com/dooball2you/spotv2/th-sport/spotv2/chunks.m3u8",
+"referer": "https://dooball2you.com/",
+"playInNatPlayer":"true"},
+
+{"name":"True Ball Thai 1A🇹🇭",
+"image":"https://i.imgur.com/0w3HloJ.png",
+"url": "https://cdn1.googlecdnforstreaming.live/live/trueballthai1/chunks.m3u8",
+"referer":"https://warpdooball.net/",
+"playInNatPlayer": "true"},
+ 
+{"name":"True Ball Thai 1B🇹🇭",
+"image":"https://i.imgur.com/0w3HloJ.png",
+"url": "https://www.ball24.tv/allchannel/?id=baygonhero1",
+"playInNatPlayer": "true"},
+ 
+{"name":"True Ball Thai 2A🇹🇭",
+"image":"https://i.imgur.com/5B5PcxF.png",
+"url": "https://cdn1.googlecdnforstreaming.live/live/trueballthai2/chunks.m3u8",
+"referer":"https://warpdooball.net/",
+"playInNatPlayer": "true"},
+ 
+{"name":"True Ball Thai 2B🇹🇭",
+"image":"https://i.imgur.com/5B5PcxF.png",
+"url": "https://www.ball24.tv/allchannel/?id=baygonhero2",
+"playInNatPlayer": "true"},
+ 
+{"name":"True Ball Thai 3A🇹🇭",
+"image":"https://i.imgur.com/6q1pCua.png",
+"url": "https://cdn1.googlecdnforstreaming.live/live/trueballthai3/chunks.m3u8",
+"referer":"https://warpdooball.net/",
+"playInNatPlayer": "true"},
+ 
+{"name":"True Ball Thai 3B🇹🇭",
+"image":"https://i.imgur.com/6q1pCua.png",
+"url": "https://www.ball24.tv/allchannel/?id=baygonhero3",
+"playInNatPlayer": "true"},
+ 
+{"name":"True Ball Thai 4A🇹🇭",
+"image":"https://i.imgur.com/SmuaRHv.png",
+"url": "https://cdn1.googlecdnforstreaming.live/live/trueballthai4/chunks.m3u8",
+"referer":"https://warpdooball.net/",
+"playInNatPlayer": "true"},
+ 
+{"name":"True Ball Thai 4B🇹🇭",
+"image":"https://i.imgur.com/SmuaRHv.png",
+"url": "https://www.ball24.tv/allchannel/?id=baygonhero4",
+"playInNatPlayer": "true"},
+ 
+{"name":"True Ball Thai 5A🇹🇭",
+"image":"https://i.imgur.com/kiJUo9I.png",
+"url": "https://cdn1.googlecdn.live/dooballx/trueballthai5/chunks.m3u8",
+"referer":"https://dooballx.com/",
+"playInNatPlayer": "true"},
+
+{"name":"True Ball Thai 5B🇹🇭",
+"image":"https://i.imgur.com/kiJUo9I.png",
+"url": "https://cdn1.googlecdnforstreaming.live/live/trueballthai5/chunks.m3u8",
+"referer":"https://warpdooball.net/",
+"playInNatPlayer": "true"},
+
+{"name":"True Ball Thai 6A🇹🇭",
+"image":"https://i.imgur.com/B8vxz7Q.png",
+"url": "https://cdn1.googlecdn.live/dooballx/trueballthai6/chunks.m3u8",
+"referer":"https://dooballx.com/",
+"playInNatPlayer": "true"},
+
+{"name":"True Ball Thai 6B🇹🇭",
+"image":"https://i.imgur.com/B8vxz7Q.png",
+"url": "https://cdn1.googlecdnforstreaming.live/live/trueballthai6/chunks.m3u8",
+"referer":"https://warpdooball.net/",
+"playInNatPlayer": "true"},
+
+{"name":"True Ball Thai 7A🇹🇭",
+"image":"https://i.imgur.com/gCOXRub.png",
+"url": "https://cdn1.googlecdn.live/dooballx/trueballthai7/chunks.m3u8",
+"referer":"https://dooballx.com/",
+"playInNatPlayer": "true"},
+
+{"name":"True Ball Thai 7B🇹🇭",
+"image":"https://i.imgur.com/gCOXRub.png",
+"url": "https://cdn1.googlecdnforstreaming.live/live/trueballthai7/chunks.m3u8",
+"referer":"https://warpdooball.net/",
+"playInNatPlayer": "true"},
+
+{"name":"True Ball Thai 8A🇹🇭",
+"image":"https://i.imgur.com/nGpibis.png",
+"url": "https://cdn1.googlecdn.live/dooballx/trueballthai8/chunks.m3u8",
+"referer":"https://dooballx.com/",
+"playInNatPlayer": "true"},
+
+{"name":"True Ball Thai 8B🇹🇭",
+"image":"https://i.imgur.com/nGpibis.png",
+"url": "https://cdn1.googlecdnforstreaming.live/live/trueballthai8/chunks.m3u8",
+"referer":"https://warpdooball.net/",
+"playInNatPlayer": "true"},
+
+{"name":"True Ball Thai 9A🇹🇭",
+"image":"https://i.imgur.com/HVLBvs3.png",
+"url": "https://cdn1.googlecdn.live/dooballx/trueballthai9/chunks.m3u8",
+"referer":"https://dooballx.com/",
+"playInNatPlayer": "true"},
+
+{"name":"True Ball Thai 9B🇹🇭",
+"image":"https://i.imgur.com/HVLBvs3.png",
+"url": "https://cdn1.googlecdnforstreaming.live/live/trueballthai9/chunks.m3u8",
+"referer":"https://warpdooball.net/",
+"playInNatPlayer": "true"},
+
+{"name":"True Ball Thai 10A🇹🇭",
+"image":"https://i.imgur.com/CWPtct3.png",
+"url": "https://cdn1.googlecdn.live/dooballx/trueballthai10/chunks.m3u8",
+"referer":"https://dooballx.com/",
+"playInNatPlayer": "true"},
+
+{"name":"True Ball Thai 10B🇹🇭",
+"image":"https://i.imgur.com/CWPtct3.png",
+"url": "https://cdn1.googlecdnforstreaming.live/live/trueballthai10/chunks.m3u8",
+"referer":"https://warpdooball.net/",
+"playInNatPlayer": "true"},
+
+{"name":"SiamSpots1🇯🇵",
+"image":"https://i.imgur.com/mE6W2fH.png",
+"url": "https://cdn1.googlecdnforstreaming.live/live/siamsport1/chunks.m3u8",
+"referer":"https://warpdooball.net/",
+"playInNatPlayer":"true"},
+
+{"name":"SiamSpots2🇯🇵",
+"image":"https://i.imgur.com/NzsmJRf.png",
+"url": "https://cdn1.googlecdnforstreaming.live/live/siamsport2/chunks.m3u8",
+"referer":"https://warpdooball.net/",
+"playInNatPlayer":"true"},
+
+{"name":"SiamSpots3🇯🇵",
+"image":"https://i.imgur.com/5zRJZJ1.png",
+"url": "https://cdn1.googlecdnforstreaming.live/live/siamsport3/chunks.m3u8",
+"referer":"https://warpdooball.net/",
+"playInNatPlayer":"true"},
+
+{"name":"SiamSpots4🇯🇵",
+"image":"https://i.imgur.com/2a1n7mQ.png",
+"url": "https://cdn1.googlecdnforstreaming.live/live/siamsport4/chunks.m3u8",
+"referer":"https://warpdooball.net/",
+"playInNatPlayer":"true"},
+
+{"name":"TSports-A🇹🇭",
+"image":"https://i.imgur.com/TEm4Bra.png",
+"url":"https://edge6a.v2h-cdn.com/t_sport/t_sport.stream/playlist.m3u8",
+"playInNatPlayer":"true"},
+
+{"name":"TSports-B🇹🇭",
+"image":"https://i.imgur.com/TEm4Bra.png",
+"url":"https://dookeela.live/live-tv/tsports7",
+"playInNatPlayer":"true"},
+
+
+
+
+
+
+
+
 ]
 }
