--- a/NexterBeINSport.html
+++ b/NexterBeINSport.html
@@ -370,6 +370,204 @@ url:"https://fw4free.inwstream.com/fw4free/bein3.stream/playlist.m3u8",
 
 
 
+{"name": "beIN Sports1-A🇹🇭",
+"image": "https://i.imgur.com/Ao7sk59.png",
+"url": "https://streaming.livescorethai.net/iptv/epl-bein1.stream/chunks.m3u8",
+"referer": "https://livescorethai.net/",
+"playInNatPlayer":"true"},
+
+{"name": "beIN Sports1-B🇹🇭",
+"image": "https://i.imgur.com/Ao7sk59.png",
+"url": "https://cdn1.googlecdn.live/dooballx/bein1/chunks.m3u8",
+"referer": "https://dooballx.com/",
+"playInNatPlayer": "true"},
+
+{"name": "beIN Sports1-C🇹🇭",
+"image": "https://i.imgur.com/Ao7sk59.png",
+"url": "https://rr3-ic3d-ndjcs.huaweicdncloud.com/dooball2you/bein1/th-sport/bein1/chunks.m3u8",
+"referer":"https://dooball2you.com/",
+"playInNatPlayer":"true"},
+
+{"name": "beIN Sports1-D🇹🇭",
+"image": "https://i.imgur.com/Ao7sk59.png",
+"url": "https://dolive.thaim3u.com/doolive4k-tv/siamsport-6/chunks.m3u8",
+"referer":"https://doolive4k.tv/",
+"playInNatPlayer":"true"},
+
+{"name": "beIN Sports2-A🇹🇭",
+"image": "https://i.imgur.com/DYH8nNM.png",
+"url": "https://streaming.livescorethai.net/iptv/epl-bein2.stream/playlist.m3u8",
+"referer": "https://livescorethai.net/",
+"playInNatPlayer":"true"},
+
+{"name": "beIN Sports2-B🇹🇭",
+"image": "https://i.imgur.com/DYH8nNM.png",
+"url": "https://cdn1.googlecdn.live/dooballx/bein2/chunks.m3u8",
+"referer": "https://dooballx.com/",
+"playInNatPlayer": "true"},
+
+{"name": "beIN Sports2-C🇹🇭",
+"image": "https://i.imgur.com/DYH8nNM.png",
+"url": "https://rr3-ic3d-ndjcs.huaweicdncloud.com/dooball2you/bein2/playlist.m3u8",
+"referer": "https://dooball2you.com/",
+"playInNatPlayer":"true"},
+
+{"name": "beIN Sports3-A🇹🇭",
+"image": "https://i.imgur.com/ZZJiTau.png",
+"url": "https://streaming.livescorethai.net/iptv/epl-bein3.stream/playlist.m3u8",
+"referer": "https://livescorethai.net/",
+"playInNatPlayer":"true"},
+
+{"name": "beIN Sports3-B🇹🇭",
+"image": "https://i.imgur.com/ZZJiTau.png",
+"url": "https://rr3-ic3d-ndjcs.huaweicdncloud.com/dooball2you/bein3/playlist.m3u8",
+"referer": "https://dooball2you.com/",
+"playInNatPlayer":"true"},
+
+{"name": "beIN Sports3-C🇹🇭",
+"image": "https://i.imgur.com/ZZJiTau.png",
+"url": "https://cdn1.googlecdn.live/dooballx/bein3/chunks.m3u8",
+"referer": "https://dooballx.com/",
+"playInNatPlayer": "true"},
+
+{"name": "beIN Sports3-D🇹🇭",
+"image": "https://i.imgur.com/ZZJiTau.png",
+"url": "https://dolive.thaim3u.com/doolive4k-tv/siamsport-7/chunks.m3u8",
+"referer":"https://doolive4k.tv/",
+"playInNatPlayer":"true"},
+
+{"name":"beIN Sports4-A🇹🇭",
+"image": "https://i.imgur.com/gFc7TJu.png",
+"url": "https://streaming.livescorethai.net/iptv/epl-bein4.stream/playlist.m3u8",
+"referer": "https://livescorethai.net/",
+"playInNatPlayer":"true"},
+
+{"name":"beIN Sports4-B🇹🇭",
+"image": "https://i.imgur.com/gFc7TJu.png",
+"url": "https://cdn1.googlecdn.live/dooballx/bein4/chunks.m3u8",
+"referer": "https://dooballx.com/",
+"playInNatPlayer": "true"},
+
+{"name":"beIN Sports5🇹🇭",
+"image": "https://i.imgur.com/2oc0cEk.png",
+"url": "https://cdn1.googlecdn.live/dooballx/bein5/chunks.m3u8",
+"referer": "https://dooballx.com/",
+"playInNatPlayer": "true"},
+
+{"name":"beIN Sports6🇹🇭",
+"image": "https://i.imgur.com/uTJ4JTh.png",
+"url": "https://cdn1.googlecdn.live/dooballx/bein6/chunks.m3u8",
+"referer": "https://dooballx.com/",
+"playInNatPlayer": "true"},
+
+{"name":"beIN Sports7🇹🇭",
+"image": "https://i.imgur.com/md5sJzf.png",
+"url": "https://cdn1.googlecdn.live/dooballx/bein7/chunks.m3u8",
+"referer": "https://dooballx.com/",
+"playInNatPlayer": "true"},
+
+{"name":"beIN Sports8🇹🇭",
+"image": "https://i.imgur.com/jxRsWWb.png",
+"url": "https://cdn1.googlecdn.live/dooballx/bein8/chunks.m3u8",
+"referer": "https://dooballx.com/",
+"playInNatPlayer": "true"},
+
+{"name":"beIN Sports9🇹🇭",
+"image": "https://i.imgur.com/YYDm6fS.png",
+"url": "https://cdn1.googlecdn.live/dooballx/bein9/chunks.m3u8",
+"referer": "https://dooballx.com/",
+"playInNatPlayer": "true"},
+
+{"name": "beIN Sports 1🇬🇧",
+"image": "https://i.imgur.com/5wdxCVC.png",
+"url": "https://webhdrus.onlinehdhls.ru/lb/premium91/index.m3u8",
+"referer": "https://claplivehdplay.ru/",
+"userAgent": "http-user-agent=Mozilla/5.0 (iPhone; CPU iPhone OS 13_2_3 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/13.0.3 Mobile/15E148 Safari/604.1",
+"playInNatPlayer": "true"},
+
+{"name": "beIN Sports 2🇬🇧",
+"image": "https://i.imgur.com/jDEw4m5.png",
+"url":"https://streaming.livescorethai.net/iptv/epl-bein2eng.stream/playlist.m3u8",
+"referer":"https://livescorethai.net/",
+"playInNatPlayer":"true"},
+
+{"name": "beIN Sports 3🇬🇧",
+"image": "https://i.imgur.com/i74q3L6.png",
+"url":"https://streaming.livescorethai.net/iptv/epl-bein3eng.stream/playlist.m3u8",
+"referer":"https://livescorethai.net/",
+"playInNatPlayer":"true"},
+
+{"name": "beIN Sports 1🇧🇭",
+"image": "https://i.imgur.com/LF8T6em.png",
+"url": "https://streaming.livescorethai.net/iptv/hd-bein1.stream/chunks.m3u8",
+"referer": "https://livescorethai.net/",
+"playInNatPlayer": "true"},
+
+{"name": "beIN Sports 2🇧🇭",
+"image": "https://i.imgur.com/aM3dpHC.png",
+"url": "https://streaming.livescorethai.net/iptv/hd-bein2.stream/chunks.m3u8",
+"referer": "https://livescorethai.net/",
+"playInNatPlayer": "true"},
+
+{"name": "beIN Sports 3🇧🇭",
+"image": "https://i.imgur.com/N1T9KEM.png",
+"url": "https://streaming.livescorethai.net/iptv/hd-bein3.stream/chunks.m3u8",
+"referer": "https://livescorethai.net/",
+"playInNatPlayer": "true"},
+
+{"name": "beIN Sports 4🇧🇭",
+"image": "https://i.imgur.com/KsUMfKs.png",
+"url": "https://streaming.livescorethai.net/iptv/hd-bein4.stream/chunks.m3u8",
+"referer": "https://livescorethai.net/",
+"playInNatPlayer": "true"},
+
+{"name": "beIN Sports 5🇧🇭",
+"image": "https://i.imgur.com/SY19LkE.png",
+"url": "https://streaming.livescorethai.net/iptv/hd-bein5.stream/chunks.m3u8",
+"referer": "https://livescorethai.net/",
+"playInNatPlayer": "true"},
+
+{"name": "beIN Sports 1A-Fr🇨🇵",
+"image": "https://i.imgur.com/G0V0sGS.png",
+"url": "https://streaming.livescorethai.net/iptv/fr-bein1hd.stream/chunks.m3u8",
+"referer": "https://livescorethai.net/",
+"playInNatPlayer": "true"},
+
+{"name": "beIN Sports 1B-Fr🇨🇵",
+"image": "https://i.imgur.com/G0V0sGS.png",
+"url": "https://cdn1.googlecdn.live/dooballx/beinsport1fr/chunks.m3u8",
+"referer":"https://dooballx.com/",
+"playInNatPlayer": "true"},
+
+{"name": "beIN Sports 2A-Fr🇨🇵",
+"image": "https://i.imgur.com/NWM4KGI.png",
+"url": "https://streaming.livescorethai.net/iptv/fr-bein2hd.stream/chunks.m3u8",
+"referer": "https://livescorethai.net/",
+"playInNatPlayer": "true"},
+
+{"name": "beIN Sports 2B-Fr🇨🇵",
+"image": "https://i.imgur.com/NWM4KGI.png",
+"url": "https://cdn1.googlecdn.live/dooballx/beinsport2fr/chunks.m3u8",
+"referer":"https://dooballx.com/",
+"playInNatPlayer": "true"},
+
+{"name": "beIN Sports 3A-Fr🇨🇵",
+"image": "https://i.imgur.com/L8kkiId.png",
+"url": "https://streaming.livescorethai.net/iptv/fr-bein3hd.stream/chunks.m3u8",
+"referer": "https://livescorethai.net/",
+"playInNatPlayer": "true"},
+
+{"name": "beIN Sports 3B-Fr🇨🇵",
+"image": "https://i.imgur.com/L8kkiId.png",
+"url": "https://webhdrus.onlinehdhls.ru/lb/premium118/index.m3u8",
+"referer": "https://claplivehdplay.ru/",
+"userAgent":"http-user-agent=Mozilla/5.0 (iPhone; CPU iPhone OS 13_2_3 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/13.0.3 Mobile/15E148 Safari/604.1",
+"playInNatPlayer":"true"},
+
+
+
+
+
 
  
 
